1.6/_sources/modules/generated/sklearn.feature_selection.SelectPercentile.rst.txt
SelectPercentile
================

.. currentmodule:: sklearn.feature_selection

.. autoclass:: SelectPercentile
   :members:
   :inherited-members:
   :special-members: __call__

.. minigallery:: sklearn.feature_selection.SelectPercentile sklearn.feature_selection.SelectPercentile.__init__ sklearn.feature_selection.SelectPercentile.fit sklearn.feature_selection.SelectPercentile.fit_transform sklearn.feature_selection.SelectPercentile.get_feature_names_out sklearn.feature_selection.SelectPercentile.get_metadata_routing sklearn.feature_selection.SelectPercentile.get_params sklearn.feature_selection.SelectPercentile.get_support sklearn.feature_selection.SelectPercentile.inverse_transform sklearn.feature_selection.SelectPercentile.set_output sklearn.feature_selection.SelectPercentile.set_params sklearn.feature_selection.SelectPercentile.transform 
   :add-heading: Gallery examples
   :heading-level: -