1.7/_sources/modules/generated/sklearn.feature_selection.SelectPercentile.rst.txt
SelectPercentile
================

.. currentmodule:: sklearn.feature_selection

.. autoclass:: SelectPercentile
   :members:
   :inherited-members:
   :special-members: __call__

.. minigallery:: sklearn.feature_selection.SelectPercentile sklearn.feature_selection.SelectPercentile.__delattr__ sklearn.feature_selection.SelectPercentile.__dir__ sklearn.feature_selection.SelectPercentile.__eq__ sklearn.feature_selection.SelectPercentile.__format__ sklearn.feature_selection.SelectPercentile.__ge__ sklearn.feature_selection.SelectPercentile.__getattribute__ sklearn.feature_selection.SelectPercentile.__getstate__ sklearn.feature_selection.SelectPercentile.__gt__ sklearn.feature_selection.SelectPercentile.__hash__ sklearn.feature_selection.SelectPercentile.__init__ sklearn.feature_selection.SelectPercentile.__init_subclass__ sklearn.feature_selection.SelectPercentile.__le__ sklearn.feature_selection.SelectPercentile.__lt__ sklearn.feature_selection.SelectPercentile.__ne__ sklearn.feature_selection.SelectPercentile.__new__ sklearn.feature_selection.SelectPercentile.__reduce__ sklearn.feature_selection.SelectPercentile.__reduce_ex__ sklearn.feature_selection.SelectPercentile.__repr__ sklearn.feature_selection.SelectPercentile.__setattr__ sklearn.feature_selection.SelectPercentile.__setstate__ sklearn.feature_selection.SelectPercentile.__sizeof__ sklearn.feature_selection.SelectPercentile.__sklearn_clone__ sklearn.feature_selection.SelectPercentile.__sklearn_tags__ sklearn.feature_selection.SelectPercentile.__str__ sklearn.feature_selection.SelectPercentile.__subclasshook__ sklearn.feature_selection.SelectPercentile._build_request_for_signature sklearn.feature_selection.SelectPercentile._check_params sklearn.feature_selection.SelectPercentile._get_default_requests sklearn.feature_selection.SelectPercentile._get_doc_link sklearn.feature_selection.SelectPercentile._get_metadata_request sklearn.feature_selection.SelectPercentile._get_param_names sklearn.feature_selection.SelectPercentile._get_params_html sklearn.feature_selection.SelectPercentile._get_support_mask sklearn.feature_selection.SelectPercentile._html_repr sklearn.feature_selection.SelectPercentile._repr_html_inner sklearn.feature_selection.SelectPercentile._repr_mimebundle_ sklearn.feature_selection.SelectPercentile._transform sklearn.feature_selection.SelectPercentile._validate_params sklearn.feature_selection.SelectPercentile.fit sklearn.feature_selection.SelectPercentile.fit_transform sklearn.feature_selection.SelectPercentile.get_feature_names_out sklearn.feature_selection.SelectPercentile.get_metadata_routing sklearn.feature_selection.SelectPercentile.get_params sklearn.feature_selection.SelectPercentile.get_support sklearn.feature_selection.SelectPercentile.inverse_transform sklearn.feature_selection.SelectPercentile.set_output sklearn.feature_selection.SelectPercentile.set_params sklearn.feature_selection.SelectPercentile.transform 
   :add-heading: Gallery examples
   :heading-level: -